# TrabalhoFinal

./: .gitignore  IA-Trabalho-Final.ipynb  IA_Trabalho_Final_LTNtorch.ipynb  README.md  entregas_5runs.py  plano_implementacao_LTN_v2.md  pyproject.toml  requirements.txt  resultados_5runs.md  tarefa1_ltn.py  tarefa2_ltn.py  tarefa4_ltn.py
