[project]
name = "trabalhofinal"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaide Fernando de Carvalho Zardin",email = "jaide.zardin@icomp.ufam.edu.br"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.12.1,<3.0.0)",
    "ltntorch (>=1.0.2,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
