[project]
name = "trabalhofinal"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaide Fernando de Carvalho Zardin",email = "jaide.zardin@icomp.ufam.edu.br"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch>=2.12.1,<3.0.0",
    "ltntorch>=1.0.2,<2.0.0",
    "matplotlib>=3.11.0,<4.0.0",
    "scikit-learn>=1.9.0,<2.0.0",
    "pandas>=3.0.3,<4.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "ipykernel>=7.3.0,<8.0.0",
    "numpy>=2.0.0,<3.0.0",
    "tabulate (>=0.10.0,<0.11.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
